--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="container-6 w-container">
             <nav role="navigation" class="w-nav-menu">
-                <a href="about.html" class="nav-link-5 w-nav-link">About MODA</a>
+                <a href="about-us.html" class="nav-link-5 w-nav-link">About MODA</a>
                 <a href="hair.html" class="nav-link-5 w-nav-link">HAIR</a>
                 <a href="beauty.html" class="nav-link-4 w-nav-link">BEAUTY</a>
                 <a href="rent-salon-space.html" class="nav-link-3 work-from w-nav-link">WORK FROM MODA</a>
@@ -367,8 +367,7 @@
             <h2 class="h2 get-intouch">Get in touch</h2>
             <div class="div-block-8">
                 <p class="paragraph mobile-footer">For advice on your hair and guidance regarding treatments, please call us on the landline number below, <br>send us an e-mail,<br>or visit us at:<br>‍<br>176 Moulsham St, London, Chelmsford CM2 0LD<br>‍<a href="tel:01245354738" class="link">T: 01245 354 738</a>‍
-                    <a
-                        href="mailto:whoops@thisisnotarealsalon.com" class="link">E: info@modahairsalon.co.uk</a><br></p>
+                    <a href="mailto:whoops@thisisnotarealsalon.com" class="link">E: info@modahairsalon.co.uk</a><br></p>
                 <div class="div-block-5">
                     <h4 class="heading-17">Alternatively, find us on<br>the following social media</h4>
                     <div id="w-node-_35d03648-2007-b5c9-6241-6c245fa66ad6-5fa66abb" class="footer_ctatext">
@@ -388,11 +387,10 @@
             <div class="w-layout-grid grid_contact">
                 <div id="w-node-_64d1f7b8-367f-c52b-9507-34f8b6c56846-5fa66abb" class="form-block w-form">
                     <form id="wf-form-Web-Footer-Form" name="wf-form-Web-Footer-Form" data-name="Web Footer Form" redirect="/thank-you" data-redirect="/thank-you" method="get" class="form"><label for="Name-3" class="field-label">Name</label><input type="text" class="form_input w-input" maxlength="256" name="Name-2" data-name="Name 2" placeholder="" id="Name-2" required=""><label for="Email-3" class="field-label">Email Address</label>
-                        <input
-                            type="email" class="form_input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="" id="Email-2" required=""><label for="Phone-4" class="field-label">Phone Number</label><input type="tel" class="form_input w-input" maxlength="256" name="Phone-3" data-name="Phone 3" placeholder="" id="Phone-3" required=""><label for="Questions-or-Comments-3"
-                                class="field-label">Questions / Comments</label><textarea id="Questions-or-Comments-2" name="Questions-or-Comments-2" maxlength="5000" data-name="Questions Or Comments 2" placeholder="" class="textarea w-input"></textarea>
-                            <input
-                                type="submit" value="Send Message" data-wait="Please wait..." class="button w-button"></form>
+                        <input type="email" class="form_input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="" id="Email-2" required=""><label for="Phone-4" class="field-label">Phone Number</label><input type="tel" class="form_input w-input"
+                            maxlength="256" name="Phone-3" data-name="Phone 3" placeholder="" id="Phone-3" required=""><label for="Questions-or-Comments-3" class="field-label">Questions / Comments</label><textarea id="Questions-or-Comments-2" name="Questions-or-Comments-2"
+                            maxlength="5000" data-name="Questions Or Comments 2" placeholder="" class="textarea w-input"></textarea>
+                        <input type="submit" value="Send Message" data-wait="Please wait..." class="button w-button"></form>
                     <div class="success-message w-form-done">
                         <div class="text-block-4">Thank you! Your submission has been received!<br><br>We typically respond within one business day. If this is urgent please, call the salon on: <br>
                             <a href="tel:01245354738" class="link-5">01245 354 738</a>
