--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu May 05 2022 14:26:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri May 06 2022 13:26:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="626bf9edafa0c55176393764" data-wf-site="6229e0ada08cfb6979914c75" lang="en">
 <head>
   <meta charset="utf-8">
@@ -58,7 +58,7 @@
     <div class="hero_cta">
       <h2 data-w-id="5b92993e-638a-bef0-6716-f2570593af03" style="opacity:0" class="hero_tagline"><span class="h1_span">feel your best,<br>stand out from the rest.</span><br></h2>
       <div class="button_container">
-        <a href="contact-us.html" class="button invert w-button">Request an appointment</a>
+        <a href="contact-us.html" class="button invert request w-button">Request an appointment</a>
       </div>
     </div>
     <div data-poster-url="videos/hair2-poster-00001.jpg" data-video-urls="videos/hair2-transcode.mp4,videos/hair2-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video id="46d79b6c-2967-c67d-c8e0-014f649534c8-video" autoplay="" loop="" style="background-image:url(&quot;videos/hair2-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
@@ -102,7 +102,7 @@
     <div class="hair-feature">
       <h2 class="h2">Our luxury Hair Services</h2>
       <div class="h2_divider"></div>
-      <p class="paragraph">At Moda, we create an environment where you feel comfortable to be yourself. From the moment you arrive, until the moment you leave, we strive to give you the best possible experience. Most importantly, we care about the health of your hair. That will be always be our priority, no matter what. Healthy hair is better than any colour.<br><br>Click on a service to call through and speak to one of the team about your specific requirements.</p>
+      <p class="paragraph">At Moda, we create an environment where you feel comfortable to be yourself. From the moment you arrive, until the moment you leave, we strive to give you the best possible experience. Most importantly, we care about the health of your hair. That will be always be our priority, no matter what. Healthy hair is better than any colour.<br><br>Please click the button below to enquire or book a service.</p>
       <a href="tel:01245354738" class="button invert hair-button w-button">Call our team to discuss your hair treatment</a>
     </div>
     <div class="div-block-13">
