removed about-us.html and added sitemap.xml
under the clients direction we have removed the about-us.html, and any
dead pages. we have added the sitemap.xml file as well for
google search console.

--- a/beauty.html
+++ b/beauty.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri May 06 2022 13:26:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon May 09 2022 09:16:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="626bf9edafa0c52315393767" data-wf-site="6229e0ada08cfb6979914c75" lang="en">
 <head>
   <meta charset="utf-8">
@@ -30,17 +30,16 @@
         <h1 class="heading">Moda<br><span class="text-span">Hair and beauty salon</span></h1>
       </a>
     </div>
+    <div class="menu-button w-nav-button">
+      <div class="icon-3 w-icon-nav-menu"></div>
+    </div>
     <div class="container-6 w-container">
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="about-us.html" class="nav-link-5 w-nav-link">ABOUT moda</a>
         <a href="hair.html" class="nav-link-5 w-nav-link">HAIR</a>
         <a href="beauty.html" aria-current="page" class="nav-link-4 w-nav-link w--current">BEAUTY</a>
         <a href="rent-salon-space.html" class="nav-link-3 work-from w-nav-link">WORK FROM MODA</a>
         <a href="contact-us.html" class="navbutton contact w-button">Contact</a>
       </nav>
-      <div class="menu-button w-nav-button">
-        <div class="icon-3 w-icon-nav-menu"></div>
-      </div>
     </div>
   </div>
   <div data-w-id="d830f7d8-7838-af2e-f28c-9646db9c9789" class="section_full wf-section">
@@ -49,8 +48,8 @@
         <div id="w-node-d830f7d8-7838-af2e-f28c-9646db9c978c-db9c9789" class="feature_container">
           <h2 class="h2 invert">The Moda beauty salon experience</h2>
           <div class="h2_divider"></div>
-          <p class="paragraph invert">The Moda Beauty Experience is all about leaving your troubles at the door and taking some well-deserved you time.<br>‍<br>Forget about the stresses of every day life and unwind with a pamper treatment at our beauty rooms upstairs. <br><br>For feeling your best, we have a whole range of beauty treatments to help you feel your best.</p>
-          <p class="paragraph">At Moda, we create an environment where you feel comfortable to be yourself. From the moment you arrive, until the moment you leave, we strive to give you the best possible experience. Most importantly, we care about the health of your hair. That will be always be our priority, no matter what. Healthy hair is better than any colour.<br><br>Click on a service to call through and speak to one of the team about your specific requirements.<br><br>Want to work FROM moda? click the button below.</p>
+          <p class="paragraph invert">The Moda Beauty Experience is all about leaving your troubles at the door and taking some well-deserved you time.</p>
+          <p class="paragraph">For guests and staff, moda salon is a place you look forward to arriving at. <br><br>We currently have a salon chair for rent for anyone looking to take their hairdressing clientele to the next level.<br><br>Want to work FROM moda? click the button to see the awesome benefits below.</p>
           <a href="rent-salon-space.html" class="button invert w-button">Work from Moda Salon</a>
         </div>
       </div>
@@ -78,9 +77,9 @@
     <div class="contact-us">
       <h2 class="h2 get-intouch">Get in touch</h2>
       <div class="div-block-8">
-        <p class="paragraph mobile-footer">For advice on your hair and guidance regarding treatments, please call us on the landline number below, <br>send us an e-mail,<br>or visit us at:<br>‍<br>176 Moulsham St, London, Chelmsford CM2 0LD<br>‍<a href="tel:01245354738" class="link">T: 01245 354 738</a>‍<a href="mailto:whoops@thisisnotarealsalon.com" class="link">E: info@modahairsalon.co.uk</a><br></p>
+        <p class="paragraph mobile-footer">For advice on your hair and guidance regarding treatments, please call us on the landline number below, <br>send us an e-mail,<br>or visit us at:<br>‍<br>Moda Hair and Beauty Salon, 176 Moulsham Street, Chelmsford CM2 0LD<br>‍<a href="tel:01245354738" class="link">T: 01245 354 738</a>‍<a href="mailto:whoops@thisisnotarealsalon.com" class="link">E: info@modahairsalon.co.uk</a><br></p>
         <div class="div-block-5">
-          <h4 class="heading-17">Alternatively, find us on<br>the following social media</h4>
+          <h4 class="heading-17">Alternatively, find us on social media</h4>
           <div id="w-node-_35d03648-2007-b5c9-6241-6c245fa66ad6-5fa66abb" class="footer_ctatext">
             <div class="social_media_container">
               <a href="#" target="_blank" class="social-media__button w-inline-block"><img src="images/iconfinder_38-instagram_1161953.svg" alt="Instagram icon" class="image-3"></a>
@@ -105,14 +104,13 @@
           </div>
         </div>
       </div>
-      <div class="map-2 w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="51.7291226,0.4708336" aria-label="" data-enable-scroll="true" role="region" title="" data-enable-touch="true" data-widget-zoom="12" data-widget-tooltip=""></div>
+      <div class="map-2 w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="51.7291226,0.4708336" aria-label="" data-enable-scroll="true" role="region" title="" data-enable-touch="true" data-widget-zoom="7" data-widget-tooltip=""></div>
     </div>
   </div>
   <div class="footer wf-section">
     <div class="w-layout-grid grid-8">
       <div id="w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebb9d6-60ebb9d4" class="footer-div">
         <h3 class="footer-heading">quick links</h3>
-        <a href="about-us.html" class="footer-link">about us</a>
         <a href="contact-us.html" class="footer-link">contact us</a>
         <a href="rent-salon-space.html" class="footer-link">careers</a>
         <a href="hair.html" class="footer-link">Hair services</a>
@@ -133,10 +131,9 @@
         <a href="tel:01245354738" class="link-4">Telephone: 01245 354 738</a>
         <a href="mailto:info@modahairsalon.co.uk?subject=Website%20Enquiry">Email: info@modahairsalon.co.uk</a>
       </div>
-      <a id="w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba03-60ebb9d4" href="#" class="link-3">Moda<span class="text-span-3"><br></span><span class="text-span-2">hair and beauty salon<br>chelmsford, essex</span></a>
       <div id="w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba14-60ebb9d4" class="footer-div">
         <h3 class="footer-heading">opening hours</h3>
-        <p class="body_home footer-body"><strong>Monday to Friday</strong><br>9am to 4pm<br><strong>Saturday &amp; Sunday<br></strong>12pm to 4pm<br><br><br></p>
+        <p class="body_home footer-body"><strong>Tuesday &amp; Wednesday</strong><br>9am till 6pm<br><strong>Thursday, Friday &amp; Saturday<br></strong>9am till 8pm<br><br><br></p>
       </div>
       <div id="w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba0b-60ebb9d4" class="w-layout-grid grid-9">
         <a id="w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba0c-60ebb9d4" href="#" target="_blank" class="w-inline-block"><img src="images/instagram-seeklogo-white.svg" loading="lazy" width="50" alt="Instagram icon" class="image-74"></a>
@@ -144,7 +141,8 @@
         <a id="w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba10-60ebb9d4" href="tel:01245354738" class="w-inline-block"><img src="images/noun_Phone_3456903.png" loading="lazy" width="50" sizes="(max-width: 1439px) 50.000003814697266px, (max-width: 1919px) 3vw, 50.000003814697266px" srcset="images/noun_Phone_3456903-p-500.png 500w, images/noun_Phone_3456903.png 691w" alt="Call icon" class="image-73"></a>
         <a id="w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba12-60ebb9d4" href="mailto:info@modahairsalon.co.uk?subject=Website%20Enquiry" class="w-inline-block"><img src="images/icon0-vector-457-01-removebg-preview.png" loading="lazy" width="50" alt="Email icon" class="image-73"></a>
       </div>
-      <div id="w-node-d234d160-6360-459f-55a1-e5697afd00b9-60ebb9d4" class="html-embed-2 w-embed">&copy; Moda Hair and Beauty Salon in Chelmsford, Essex. <a href="http://www.artisanwebsite.co" target="_blank"></a> Created with Love by <a href="https://www.wearenv.co.uk" target="_blank">New Vision Marketing.</a>
+      <a id="w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba03-60ebb9d4" href="#" class="link-3">Moda<span class="text-span-3"><br></span><span class="text-span-2">hair and beauty salon<br>chelmsford, essex</span></a>
+      <div id="w-node-d234d160-6360-459f-55a1-e5697afd00b9-60ebb9d4" class="html-embed-2 w-embed">&copy; Moda Hair and Beauty Salon in Chelmsford, Essex. <a href="http://www.artisanwebsite.co" target="_blank"></a> Designed by <a href="https://www.wearenv.co.uk" target="_blank">New Vision Marketing.</a>
       </div>
     </div>
   </div>
