--- a/index.html
+++ b/index.html
@@ -441,11 +441,10 @@
             <div class="w-layout-grid grid_contact">
                 <div id="w-node-_64d1f7b8-367f-c52b-9507-34f8b6c56846-5fa66abb" class="form-block w-form">
                     <form id="wf-form-Web-Footer-Form" name="wf-form-Web-Footer-Form" data-name="Web Footer Form" redirect="/thank-you" data-redirect="/thank-you" method="get" class="form"><label for="Name-3" class="field-label">Name</label><input type="text" class="form_input w-input" maxlength="256" name="Name-2" data-name="Name 2" placeholder="" id="Name-2" required=""><label for="Email-3" class="field-label">Email Address</label>
-                        <input
-                            type="email" class="form_input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="" id="Email-2" required=""><label for="Phone-4" class="field-label">Phone Number</label><input type="tel" class="form_input w-input" maxlength="256" name="Phone-3" data-name="Phone 3" placeholder="" id="Phone-3" required=""><label for="Questions-or-Comments-3"
-                                class="field-label">Questions / Comments</label><textarea id="Questions-or-Comments-2" name="Questions-or-Comments-2" maxlength="5000" data-name="Questions Or Comments 2" placeholder="" class="textarea w-input"></textarea>
-                            <input
-                                type="submit" value="Send Message" data-wait="Please wait..." class="button w-button"></form>
+                        <input type="email" class="form_input w-input" maxlength="256" name="Email-2" data-name="Email 2" placeholder="" id="Email-2" required=""><label for="Phone-4" class="field-label">Phone Number</label><input type="tel" class="form_input w-input"
+                            maxlength="256" name="Phone-3" data-name="Phone 3" placeholder="" id="Phone-3" required=""><label for="Questions-or-Comments-3" class="field-label">Questions / Comments</label><textarea id="Questions-or-Comments-2" name="Questions-or-Comments-2"
+                            maxlength="5000" data-name="Questions Or Comments 2" placeholder="" class="textarea w-input"></textarea>
+                        <input type="submit" value="Send Message" data-wait="Please wait..." class="button w-button"></form>
                     <div class="success-message w-form-done">
                         <div class="text-block-4">Thank you! Your submission has been received!<br><br>We typically respond within one business day. If this is urgent please, call the salon on: <br>
                             <a href="tel:01245354738" class="link-5">01245 354 738</a>
