changed parallax background

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
           <a href="rent-salon-space.html" class="button invert w-button">Work from Moda Salon</a>
         </div>
       </div>
-    </div><img src="images/alysa-bajenaru-88IV5AtWjB8-unsplash.jpg" sizes="100vw" srcset="images/alysa-bajenaru-88IV5AtWjB8-unsplash-p-1080.jpeg 1080w, images/alysa-bajenaru-88IV5AtWjB8-unsplash.jpg 1600w" alt="" class="parallaxbg">
+    </div><img src="images/pexels-make-up.jpg" alt="pexels-make-up" class="parallaxbg">
   </div>
   <div class="_3-way-gridd first venue-gallery wf-section">
     <div class="central-whitebox-l1">
@@ -425,7 +425,7 @@
     <div class="contact-us">
       <h2 class="h2 get-intouch">Get in touch</h2>
       <div class="div-block-8">
-        <p class="paragraph mobile-footer">For advice on your hair and guidance regarding treatments, please call us on the landline number below, <br>send us an e-mail,<br>or visit us at:<br>‍<br>Moda Hair and Beauty Salon, 176 Moulsham Street, Chelmsford CM2 0LD<br>‍<a href="tel:01245354738"
+        <p class="paragraph-mobile mobile-footer">For advice on your hair and guidance regarding treatments, please call us on the landline number below, <br>send us an e-mail,<br>or visit us at:<br>‍<br>Moda Hair and Beauty Salon, 176 Moulsham Street, Chelmsford CM2 0LD<br>‍<a href="tel:01245354738"
             class="link">T: 01245 354 738</a>‍<a href="mailto:whoops@thisisnotarealsalon.com" class="link">E: info@modahairsalon.co.uk</a><br></p>
         <div class="div-block-5">
           <h4 class="heading-17">Alternatively, find us on social media</h4>
@@ -477,14 +477,12 @@
                 <input class="reset-button" type="reset" name="reset" value="Clear Form" />
               </div>
             </div>
-
-
         </form>
         </div>
       </div>
       <div class="g-map-moda">
         <iframe class="g-map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2471.213917708053!2d0.46864491575960704!3d51.72912257967213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8ebc7dd70a329%3A0xfaf5abacc016149a!2sModa%20Hair%20and%20Beauty%20Salon%2C%20Chelmsford!5e0!3m2!1sen!2suk!4v1653997715669!5m2!1sen!2suk"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          width="" height="" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </div>
