updated from local repo

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <p class="paragraph invert">The Moda Beauty Experience is all about leaving your troubles at the door and taking some well-deserved you time.</p>
           <p class="paragraph">For guests and staff, moda salon is a place you look forward to arriving at. <br><br>We currently have a salon chair for rent for anyone looking to take their hairdressing clientele to the next level.<br><br>Want to work FROM moda? click the
             button to see the awesome benefits below.</p>
-          <a href="/rent-salon-space.html" class="button invert w-button">Work from Moda Salon</a>
+          <a href="rent-salon-space.html" class="button invert w-button">Work from Moda Salon</a>
         </div>
       </div>
     </div><img src="images/pexels-make-up.jpg" alt="pexels-make-up" class="parallaxbg">
@@ -484,8 +484,7 @@
       </div>
       <div class="g-map-moda">
         <iframe class="g-map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2471.213917708053!2d0.46864491575960704!3d51.72912257967213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8ebc7dd70a329%3A0xfaf5abacc016149a!2sModa%20Hair%20and%20Beauty%20Salon%2C%20Chelmsford!5e0!3m2!1sen!2suk!4v1653997715669!5m2!1sen!2suk"
-          <<<<<<< HEAD style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> ======= width="" height="" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        >>>>>>> 94c6f932a0f13f1e0bc94402c16fa9d2d14abcdd
+          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </div>
